# pasta-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  cargo.toml  memo.md  readme.md  rustfmt.toml
.cargo/: config
com_rc/: Cargo.toml
com_rc/src/: com_rc.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  word.rs
crates/gen-test/: Cargo.toml  build.rs
crates/gen_sample/: Cargo.toml
crates/gen_sample/src/: gen_sample.rs  lib.rs
crates/macro/: Cargo.toml
crates/macro-test/: Cargo.toml  build.rs
crates/macro-test/dic/: main.pasta  sakuhin.csv  words.csv
crates/macro-test/src/: gen_sample.rs  lib.rs  noodle.rs  pasta.rs
crates/macro-test/tests/: gen_sample.rs
crates/macro/src/: lib.rs
crates/script/: cargo.toml
crates/script/src/: ast.rs  dic.rs  error.rs  lib.rs  parser.rs  pasta.pest
crates/script/src/ss/: builder.rs
crates/script/src/test_data/: sample-1.pasta
crates/script/tests/: di.rs  duck.rhai  grammar.rs  parse62.pasta  parser.rs  sample.pasta  scene.rs  ss_fmt.rs
crates/shiori/: Cargo.toml
crates/shiori/src/: entry.rs  event.rs  ghost.rs  lib.rs  noodle.rs  shiori.rs
cs/: pasta.sln  setugekka.sln
cs/CSUtil/: CSUtil.csproj  CSUtil.projitems  CSUtil.shproj  packages.config
cs/CSUtil/ComponentModel/: INotificationStore.cs  NotificationStore.cs  NotifyVerificationObject.cs  ViewModelEx.cs
cs/CSUtil/IO/: PathExtensions.cs
cs/CSUtil/Math/: Fibonacci.cs
cs/CSUtil/NLog/: LoggerExt.cs
cs/CSUtil/Threading/: CancellationTokenEventExtensions.cs  ICTSCancelDisposable.cs  PrioritySemaphoreSlim.cs
cs/hana/: Hana.cs  IShiori3.cs  hana.csproj
cs/hana/Properties/: AssemblyInfo.cs
cs/pasta/: Hana.cs  packages.config  pasta.csproj
cs/pasta/Properties/: AssemblyInfo.cs
cs/pasta/Resources/: Const.cs
cs/pasta/Visuals/: BitmapLoader.cs  CompositionStage.cs  DxFactry.cs  DxUtils.cs  WicUtils.cs
cs/sample.CSUtil/ComponentModel/: NotificationObjectEx.cs
cs/sample.CSUtil/Properties/: AssemblyInfo.cs
cs/sample.CSUtil/Reflection/: AssemblyUtil.cs  AssemblyUtil40.cs  AssemblyVersionInfo.cs
cs/sample.CSUtil/Threading/: CancellationTokenExtensions.cs
cs/shiori/: ReadMe.txt  shiori.cpp  shiori.vcxproj  shiori.vcxproj.filters  stdafx.cpp  stdafx.h  util.cpp
cs/test/: PastaResourceTest.cs  UnitTest1.cs  descript.txt  packages.config  test.csproj
cs/test/Properties/: AssemblyInfo.cs
cs/test_setugekka/: NLog.config  YukiHanaTest.cs  despript.txt  packages.config  test_setugekka.csproj
cs/test_setugekka/Properties/: AssemblyInfo.cs
cs/test_ui/: MainForm.Designer.cs  MainForm.cs  NLog.config  Program.cs  test_ui.csproj
cs/test_ui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cs/tuki/: ShioriAPI.cpp  ShioriAPI.h  assembly_utils.cpp  assembly_utils.h  ishiori.cpp  ishiori.h  shiori.cpp  shiori.h  stdafx.h  tuki.cpp  tuki.h  tuki.vcxproj  tuki.vcxproj.filters  util.h
cs/yuki/: Const.cs  DescriptExt.cs  IShiori3.cs  IntPtrExt.cs  Yuki.cs  yuki.csproj
cs/yuki/Properties/: AssemblyInfo.cs
doc/: hello.dyon  main.wsd
doc/keeps/: SakuraCommunicate.txt  SakuraHomeUrl.txt  SakuraNewEvent.txt  SakuraNewTalk01.txt  SakuraTalk.txt  SakuraTheaterCtl.txt  SakuraWord.txt  descript.txt  dict-keeps-comm.txt  dict-keeps-winlocal.txt  dict-keeps.txt  dict-word.txt  fbsdlicence.txt  ghost-keeps-winlocal.txt  updates.txt
doc/keeps/dot/: event_OpeningTalkDebug.txt  links.txt  seasonTalk.txt  updateTalk.txt
doc/openkeeps330alpha8/: kawarirc.kis  openkeeps.kis  readme.txt
doc/openkeeps330alpha8/openkeeps/: callbackdebug.kis  dict-keeps-default.kis  dict-keeps-keypress.kis  dict-keeps-system.kis  dict-system.kis
doc/openkeeps330alpha8/template/: ghost-keeps-bootend.kis  ghost-keeps-comm.kis  ghost-keeps-menu.kis  ghost-keeps-mouse.kis  ghost-keeps-notify.kis  ghost-keeps.kis
note/: play.pu  scene.pu  scene2.pu
old/: Cargo.toml
old/20180529/: README.md
old/20200704/com_rc/: Cargo.toml
old/20200704/com_rc/src/: com_rc.rs  lib.rs
old/20200704/dic/: all.pasta
old/20200704/pasta_di/: Cargo.toml
old/20200704/pasta_recipe/: Cargo.toml  readme.md
old/20200704/pasta_stage/: Cargo.toml
old/20200704/pasta_viewer/: Cargo.toml
old/20200704/pasta_vscode/: language-configuration.json
old/20200704/shiori3/: Cargo.toml
old/20200704/shiori3/src/: api.rs  lib.rs
old/20200704/shiori_hglobal/: Cargo.toml  README.md
old/20200704/shiori_hglobal/src/: enc.rs  lib.rs  windows.rs
old/20200704/shiori_parser/: Cargo.toml
old/src/: lib.rs
pasta/: Cargo.toml
pasta/src/: windows.rs
pasta/src/shiori3/: res.rs
pasta_di/: Cargo.toml
pasta_di/src/: lib.rs  shiori.rs
pasta_parser/: Cargo.toml  cargo.toml
pasta_parser/src/: lib.rs  pasta.pest
pasta_parser/src/test_data/: all.pasta  sample-1.pasta  sample-2.pasta  ネタ帳.txt
pasta_parser/tests/: parser_test.rs
pasta_recipe/: Cargo.toml  readme.md
pasta_recipe/dyon_study/: wait_next.dyon
pasta_stage/: Cargo.toml
pasta_vscode/: README.md  package.json
pasta_vscode/test-files/: sample-1.pasta
script/: cargo.toml
script/examples/: repl.rs
script/src/: di.rs  dic.rs  error.rs  lib.rs  parser.rs  pasta.pest  ss.rs  ss_fmt.rs  ss_format.rs
script/src/ss/: builder.rs  env.rs  scene.rs  yield_redume.rs
script/tests/: ast.pasta  ast.rhai  char_listup.rs  dic.rs  duck.pasta  duck.rhai  grammar.rs  parse62.pasta  parser.rs  parser_test.rs  rhai.rs  ss.rs  ss_fmt.rs  ss_format.rs
shiori3/: Cargo.toml
shiori3/src/: api.rs  mod.rs  parsers.rs  req.rs
shiori3_api/: Cargo.toml
shiori3_api/src/: api.rs  error.rs  lib.rs  windows.rs
shiori_hglobal/: Cargo.toml
shiori_hglobal/src/: enc.rs  lib.rs  windows.rs
shiori_lua/: Cargo.toml
shiori_lua/lua/: hello.lua  init.lua
shiori_lua/script/: request.lua
shiori_lua/src/: lib.rs
shiori_parser/: Cargo.toml
shiori_parser/src/: ident.rs  lib.rs  req.rs  shiori.pest  shiori.rs
src/: .travis.yml  gstr.rs  lib.rs  win32.rs  windows.rs
src/shiori3/: api.rs  enums.rs  mod.rs  readme.md  recipe.md  recipe.pasta  recipe.rs  req.rs  res.rs
(+51 files in other folders)
