[package]
authors = ["ekicyou <dot.station@gmail.com>"]
name = "pasta"
version = "0.1.0"

[dependencies]
env_logger = "^0.3.5"
file_logger = "^0.1.0"
lazy_static = "^0.2.2"
libc = "^0.2.18"
local-encoding = "^0.2.0"
log = "^0.3.6"
regex = "^0.1.80"
toml = "^0.2.1"

[dependencies.nom]
features = ["verbose-errors", "regexp_macros"]
version = "^2.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shiori"
path = "src/lib.rs"

[target]

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
kernel32-sys = "^0.2.2"
user32-sys = "^0.2.0"
widestring = "^0.2.2"
winapi = "^0.2.8"
