[package]
authors = ["ekicyou <dot.station@gmail.com>"]
description = "impl shiori for rust{...}"
keywords = ["shiori", "ukagaka"]
license = "MIT"
name = "pasta"
readme = "README.md"
repository = "https://github.com/ekicyou/pasta-rs"
version = "0.1.1"

[dependencies]
lazy_static = "^0.2.2"
libc = "^0.2.18"
log = "^0.3.6"
regex = "^0.1.80"
toml = "^0.2.1"

[dev-dependencies]
env_logger = "^0.3.5"

[dependencies.nom]
features = ["verbose-errors", "regexp_macros"]
version = "^2.0.1"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shiori"
path = "src/lib.rs"

[target]

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
winapi = "^0.2.8"
kernel32-sys = "^0.2.2"
shiori_hglobal = "^0.1.1"
