[workspace]
license = "MIT"
members = [
    "pasta_di",
    "pasta_parser",
    "pasta_recipe",
    "com_rc",
#    "pasta_stage",
#    "pasta_viewer",
    "shiori_lua",
    "shiori_hglobal",
    "shiori_parser",
    "shiori3_api",
#    "pasta",
]

[replace]
# "winapi:0.3" =  {version = "0.3", features = ["winerror", "d3d11", "dcomp"]}
