[package]
authors = ["ekicyou <dot.station@gmail.com>"]
description = "impl shiori for rust{...}"
keywords = ["shiori", "ukagaka"]
license = "MIT"
name = "pasta"
readme = "README.md"
repository = "https://github.com/ekicyou/pasta-rs"
version = "0.2"

[dependencies]
lazy_static = "1"
log = "0.4"
regex = "1"
toml = "0.4"

[dev-dependencies]
env_logger = "0.5"


[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shiori"
path = "src/lib.rs"
