[package]
name = "pasta_di"
version = "0.2.0"
description = "pasta di trait"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/shiori_hglobal_rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies.nom]
features = ["verbose-errors", "regexp_macros"]
version = "4"
