[package]
name = "pasta_di"
description = "pasta di trait"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies.nom]
features = ["verbose-errors", "regexp_macros"]
version = "4"
