[package]
name = "pasta_di"
description = "pasta di trait"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4.2"
nom = {version = "4",features = ["verbose-errors", "regexp_macros",] }

[dev-dependencies]
env_logger = "0.5"
