[package]
name = "pasta_recipe"
description = "pasta emote recipe"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4"
dyon = "0.37"
failure = "0.1.2"

[dev-dependencies]
env_logger = "0.5"
