[package]
name = "shiori3"
description = "shiori3 api"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]
pasta_di        = "../pasta_di"
shiori_hglobal  = "../shiori_hglobal"
nom             = { version = "4.0.0", features = [ "regexp_macros", "verbose-errors", ] }
regex           = { version = "1.0.0" }