[package]
name = "shiori3_api"
description = "shiori3 api"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]
shiori_hglobal  = { path = "../shiori_hglobal" }
shiori_parser  = { path = "../shiori_parser" }
log = "0.4.2"
lazy_static     = "1"

[target."cfg(windows)".dependencies]
winapi = {version = "0.3.5", features = [ "winbase", "stringapiset", ] }
