[package]
name = "shiori3_api"
description = "shiori3 api"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
shiori_hglobal  = { path = "../shiori_hglobal" }
shiori_parser  = { path = "../shiori_parser" }

[target."cfg(windows)".dependencies]
winapi = {version = "0.3", features = [ "winbase", "stringapiset", ] }

[dev-dependencies]
env_logger = "0.5"
