[package]
name = "shiori_hglobal"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/shiori_hglobal_rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"
description = "impl str for HGLOBAL{...}"

[dependencies]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser"] }
