[package]
name = "shiori_lua"
description = "lua shiori implement"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
rlua = {git="https://github.com/ekicyou/rlua", branch = "stable"}

[dev-dependencies]
env_logger = "0.5"
