[package]
authors = ["ekicyou <dot.station@gmail.com>"]
edition = "2018"
name = "gen_sample"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
log = "0.4"
pasta_core = { path = "../core" }
rand = "0.8"
