[package]
authors = ["ekicyou <dot.station@gmail.com>"]
edition = "2018"
name = "macro_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
futures = "0.3.8"
once_cell = "1.5"
pasta_core = {path = "../core"}
rand = "0.7"

[build-dependencies]
log = "0.4"
pasta_macro = {path = "../macro"}
