[package]
name = "pasta_shiori"
keywords = ["ghost", "shiori", "ukagaka"]
description = "gohst pasta shiori implement"
repository = "https://github.com/ekicyou/pasta-rs"
version = "0.1.0"
authors = ["ekicyou <dot.station@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "pasta"
path = "src/lib.rs"

[dependencies]
log = "0.4"
futures ="0.3"
thiserror = "1.0"
once_cell = "1.5"
itertools = "0.9"
shiori3 = { git = "https://github.com/ekicyou/shiori3-rs", branch = "feature/new_api" }

[target."cfg(windows)".dependencies]
winapi = {version = "0.3", features = [ "impl-default", "winbase", "stringapiset", ] }

[dev-dependencies]
env_logger = "0.8"
