[package]
name = "com_rc"
description = "winapi com smart pointer"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["winapi", "com"]
license = "MIT"
readme = "README.md"


[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.5"

[target."cfg(windows)".dependencies]
winapi = {version = "0.3.5", features = ["winerror","wtypesbase","unknwnbase","objidlbase",]}
