[package]
name = "shiori3"
description = "shiori3 api"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]
pasta_di        = { path = "../pasta_di" }
shiori_hglobal  = { path = "../shiori_hglobal" }
log = "0.4.2"
lazy_static     = "1"
nom             = { version = "4", features = [ "regexp_macros", "verbose-errors", ] }
regex           = { version = "1" }