[package]
name = "shiori_hglobal"
description = "impl str for HGLOBAL{...}"
version = "0.2.0"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/pasta-rs"
keywords = ["pasta", "ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]

[target."cfg(windows)".dependencies]
winapi = {version = "0.3.5", features = [ "winbase", "stringapiset", ] }
